[package]
name = "upstash-redis-rs"
version = "0.1.2"
edition = "2021"
authors = ["Jinser Kafak <cmdr.jv@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/jetjinser/upstash-redis-rs"
repository = "https://github.com/jetjinser/upstash-redis-rs.git"
description = "A upstash redis rest API client."
license = "Apache-2.0/MIT"
documentation = "https://docs.rs/upstash-redis-rs"
categories = ["web-programming::http-client"]
keywords = ["upstash", "upstash-api", "redis"]

[dependencies]
async-trait = "0.1.74"
paste = "1.0.14"
thiserror = "1.0.50"

reqwest = { version = "0.11.22", features = ["json"] }
url = "2.5.0"

serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

[dev-dependencies]
anyhow = "1.0.75"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }

[[example]]
name = "basic"
